--- a/index js.html
+++ b/index js.html
@@ -9,6 +9,7 @@
 <button onclick="push()">push me</button>
 <button onclick="push2()"><img src="button.png" width="50" height="50"></button>
 <script>
+    let time=0
     function push() {
         alert(45)
     }
